--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,7 @@
-API_ID=
-API_HASH=
-BOT_TOKEN=
-LOG_GROUP_ID=
-MONGO_DB_URI=
-OWNER_ID=
+API_ID=18728836
+API_HASH=d17a2d658e90fa28b6dd50933f9a477a
+BOT_TOKEN=7309752796:AAHVp1Ntc9z9M_-ghqjSB6uznJ4SiZZw_h8
+LOG_GROUP_ID=-1001935706241
+MONGO_DB_URI=mongodb+srv://kottatakkal:kottatakkal@cluster0.h72lg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+OWNER_ID=7325280055
 STRING_SESSION=
